# shaderCNNvis

./: CMakeLists.txt  README.md
include/: gui.h  renderer.h  shader.h
include/stb/: stb_image.h
shaders/: convolution.glsl
src/: gui.cpp  main.cpp  renderer.cpp  shader.cpp  stb_image_impl.c
